# dcf_valuation_api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: dcf.py  health.py  jobs.py  projections.py  reports.py
app/core/: cache.py  celery_app.py  config.py  security.py
app/models/: dcf_result.py  drivers.py  enums.py  financials.py  wacc.py
app/repositories/: __init__.py  database.py  external_api.py  files.py
app/schemas/: inputs.py  outputs.py
app/services/: discount.py  equity.py  forecast.py  ingest.py  report.py  sensitivities.py  tasks.py  terminal.py  wacc.py
app/utils/: exceptions.py  logging.py  validators.py
data_sample/: README.md
docs/: README.md
